# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1000 2012/04/03 07:05:27 zmedico Exp $

*portage-2.2.0_alpha99 (03 Apr 2012)

  03 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha99.ebuild,
  -portage-2.2.0_alpha98.ebuild:
  2.2.0_alpha99 version bump. This includes all of the fixes in
  portage-2.1.10.55. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.55 (03 Apr 2012)

  03 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.55.ebuild,
  -portage-2.1.10.54.ebuild:
  2.1.10.55 version bump. This fixes bug #410625 (erroneous 'bad substitution'
  errors for profile.env). Bug #409383 tracks all bugs fixed since
  portage-2.1.10.49.

*portage-2.2.0_alpha98 (01 Apr 2012)

  01 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha98.ebuild,
  -portage-2.2.0_alpha97.ebuild:
  2.2.0_alpha98 version bump. This includes all of the fixes in
  portage-2.1.10.54. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.54 (01 Apr 2012)

  01 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.54.ebuild,
  -portage-2.1.10.53.ebuild:
  2.1.10.54 version bump. This fixes bug #410417 (dispatch-conf TypeError
  regression with python3 in portage-2.1.10.53). Bug #409383 tracks all bugs
  fixed since portage-2.1.10.49.

  01 Apr 2012; Raúl Porcel <armin76@gentoo.org> portage-2.1.10.49.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #408391

*portage-2.2.0_alpha97 (01 Apr 2012)

  01 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha97.ebuild:
  2.2.0_alpha97 version bump. This includes all of the fixes in
  portage-2.1.10.53. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.53 (01 Apr 2012)

  01 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.53.ebuild:
  2.1.10.53 version bump. This fixes bug #409627 (document bashrc caveats for