@@ -2,12 +2,10 @@ AUX README.RESCUE 137 RMD160 b8d015f266501fd1f57c91899c6815de9f9d5685 SHA1 cfc8f
 DIST portage-2.2.0_alpha88.tar.bz2 803852 RMD160 9c6a87c2a8de996286e74245faeaacf89fab0aea SHA1 d2f698470f0df250f51f937d78ea484d27ad0068 SHA256 75b74a87c4f4b1a13857f62aeb42522b491b06b66fe686ef4036993f55125130
 DIST portage-2.2.0_alpha89.patch.bz2 4205 RMD160 ff17958771ee571ccc45604682882356d2d54e5e SHA1 bf5ed24e13f89bcad128e8773f40ceea8bbd8ed2 SHA256 677bc5cce25723cefbdb8f147ac6fc7162d541eb0a149fbd1b96d79f4b2a07d1
 DIST portage-2.2.0_alpha94.tar.bz2 813945 RMD160 1abe94ff71b33255f260458d1b57a00755ba375b SHA1 5a7affd3e97bf8692a6b33ef55268b2d708bd1b8 SHA256 2b559d5596ad748be4587802012d1dfd817a1b7b40242be1f0145bb0e39a6b35
-DIST portage-2.2.0_alpha96.patch.bz2 15820 RMD160 5d5b2e3ee72385f8c546d4114d45fc9d8153e849 SHA1 38094112aa7bcb7221200e63d14bf3831703f7ac SHA256 f3809a690d423315d4755cbfdd9e833929e685047eb1e68ef0416117af089c3f
 DIST portage-2.2.0_alpha99.patch.bz2 22832 RMD160 6149168d4200550f6de4c4708b382e4abb17445a SHA1 058b8e59db0302446b0eeffa9fe72af9f9d6bd9b SHA256 043c2202049875a4021a133b6095355ca5f1041860cb579ca4d2df63d3bf6e4d
 DIST portage-man-pl-2.1.2.tar.bz2 53893 RMD160 46c3656b40bf4ad2530ab2b5fbc563708b86748c SHA1 c3151e0b330c589625830e54053fbc676b2c64de SHA256 960eaa7c6f3a2af44bdc665266a8e884628a562373cc477d301597ecc5ef961f
 EBUILD portage-2.2.0_alpha89.ebuild 15740 RMD160 488c3ae4e6afb1fc1c03fe746466e0fbdb4f0770 SHA1 1ccc3403ec313a21a0016f79b2c11eca5f7235d6 SHA256 c0b562a3f7b52f202e4c0e7b814ad3de869c22a3e9e7429d7858909e136baf08
-EBUILD portage-2.2.0_alpha96.ebuild 12434 RMD160 d7727ba842b50bb3e28dfa602c9971f5452cabc7 SHA1 b1bf5f744035d4f59243bd755a5b35c81de847a7 SHA256 b6793ae219f723525ef14833542b278328ebf5e996999559d8c3c1639eb7cb45
 EBUILD portage-2.2.0_alpha99.ebuild 12434 RMD160 7b27394b89ecd6e2f1143849528de037fbebb0e1 SHA1 45b521b0bba3a61651b03519d572e054ef0a040c SHA256 e1b92fd8753e2bf81ac17204b9505a64f44b216fc9c59c6092e357fad9186589
 EBUILD portage-9999.ebuild 11690 RMD160 1517b88b0b63b3b3d7cf12760ab701ae3a7f818a SHA1 6f330e055d9b683a7b99b34fb7ae5bad0d3fba04 SHA256 ed98f4911486a8738f175865d6f8e30091cd2c5bb2a5438dfa31b58abd0cafcb
-MISC ChangeLog 88307 RMD160 31d1c6b973167c6b2487f767e8850dcef8630d2b SHA1 a10857c89aabddf784e9125a23fe07ac13614308 SHA256 258efc08553970368acb40636032c4ce0f07ef67d7dec0b7e04f7ffa1b96126e
+MISC ChangeLog 88465 RMD160 12d03cc87e45f1dde235aa1b97e00149d5a4f1c7 SHA1 844daf4894b79e4efa1c97e838f712c2ed0f9264 SHA256 a048cc77a2e7b2a24a0ff8d4b01ec9f3dfa918689acfa52772331ce31e2dc2b2
 MISC metadata.xml 926 RMD160 9fd2d499d8102a870e45e63ec68400d71de950c6 SHA1 83f8455f45d0baaedcbbd3fc0186cccad54af7b9 SHA256 2609962ab6a20df40f95053513e6aca76b24caee81e7b3f45de7e3c7e33eec25
