@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1000 2012/04/03 07:05:27 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1001 2012/04/04 22:21:15 zmedico Exp $
+
+  04 Apr 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.44.ebuild,
+  -portage-2.1.10.52.ebuild, -portage-2.2.0_alpha96.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha99 (03 Apr 2012)
 
